--- a/designs.html
+++ b/designs.html
@@ -1,4 +1,5 @@
-    <!--
+ <!DOCTYPE html>
+   <!--
     
              ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
             ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
@@ -8,10 +9,11 @@
              ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
                                       Adrian Bece, 2015.
                                                                     -->
-<!DOCTYPE html>
+
 <html lang="en">
     <head>
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
+        <meta charset="utf-8">
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
         <meta property="og:image" content="https://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
@@ -20,7 +22,6 @@
         <!-- Facebook meta info end -->
         <!-- Default meta info-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta charset="utf-8">
         <meta name="robots" content="NOODP,NOYDIR">
         <meta name="keywords" content="Adrian, Bece, HTML , CSS, C#, C++ , C, Cpp, Osijek, Job, Programmer, Frontend, Backend, Matlab, Robotics, Computer Vision">
         <meta name="author" content="Adrian Bece">
@@ -37,10 +38,8 @@
         <script src="./bootstrap-3.3.2-dist/js/lightbox.js"></script>
         <script src="./bootstrap-3.3.2-dist/js/codeAdrianJS.js"></script>
         <style type="text/css"></style>
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
-        <!-- CSS and Javascript end-->
     </head>
 
     <body>
@@ -91,7 +90,7 @@
                 <div class="col-md-9">
                     <p>Since 2009. I've been working with a British musician Jamie Mallender who previously worked with members of Black Sabbath, Tony Martin, Ravenlord, T-Rex, etc. I've created cd covers and promo materials for his 2 albums: "Return to bass" and "Tunes from the mothership" released in 2009. and 2011., respectively.</p>
                     <p>Jamie has been a great friend of mine and fellow music-buff ever since we started working together. He gave me the job that kickstarted my interest in graphic design and I've kept honing my skills ever since. You can check out his albums and music by clicking on the buttons below.</p><br />
-                    <p><a class="btn btn-default" href="http://www.jamiemallender.co.uk/" target="_blank" role="button">Official Website »</a>&nbsp&nbsp&nbsp&nbsp<a class="btn btn-default" href="https://www.cdbaby.com/Artist/JamieMallender" target="_blank" role="button">Albums and music »</a></br/></p>
+                    <p><a class="btn btn-default" href="http://www.jamiemallender.co.uk/" target="_blank" role="button">Official Website »</a>&nbsp;&nbsp;&nbsp;&nbsp;<a class="btn btn-default" href="https://www.cdbaby.com/Artist/JamieMallender" target="_blank" role="button">Albums and music »</a></br/></p>
                 </div>
             </div>
             <hr />
@@ -209,10 +208,8 @@
         </div><!-- /.container -->
         </div>
         <!-- Bootstrap core JavaScript -->
-        <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
 
         <script>
