--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
     <!--
     
              ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
@@ -8,12 +10,12 @@
              ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
                                       Adrian Bece, 2015.
                                                                     -->
-<!DOCTYPE html>
+
 <html lang="en">
     <head>
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
         <link rel="icon" href="./resources/images/ca_icon.png">
-
+        <meta charset="utf-8">
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
         <meta property="og:image" content="https://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
@@ -22,7 +24,6 @@
         <!-- Facebook meta info end -->
         <!-- Default meta info-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta charset="utf-8">
         <meta name="robots" content="NOODP,NOYDIR">
         <meta name="keywords" content="Adrian, Bece, HTML , CSS, C#, C++ , C, Cpp, Osijek, Job, Programmer, Frontend, Backend, Matlab, Robotics, Computer Vision">
         <meta name="author" content="Adrian Bece">
@@ -37,11 +38,8 @@
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="./bootstrap-3.3.2-dist/js/codeAdrianJS.js"></script>
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
-
         <style type="text/css"></style>
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-        <!-- CSS and Javascript end -->
     </head>
     <body>
         <!-- NAV  -->
@@ -54,7 +52,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"></img></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./resources/images/ca_nav_logo.gif" alt="Code Adrian"/></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -68,21 +66,21 @@
             </div>
         </nav>
         <!-- NAV END  -->
-        <!-- ------------ CONTENT ------------  -->
+        <!-- - - - - - - - - - - - - CONTENT - - - - - - - - - - - -  -->
         <div class="jumbotron noMargin">
             <div class="container centered img-bgnd">
-                <img class="img-responsive" id="img-intro" src="./resources/images/ca_logo_txt.png">
+                <img class="img-responsive" id="img-intro" src="./resources/images/ca_logo_txt.png" alt="Hello, my name is Adrian Bece and I'm a developer and a designer."/>
             </div>
         </div>
         <div class="container-full container-blue">
             <div class="row centeredColumns">
                 <div class="col-lg-5">
                     <h4 class="centered">Basic information</h4><hr />
-                    <p><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp<b>Name: </b>Adrian Bece</p>
-                    <p><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp<b>Date of birth: </b>September 26th 1991.</p>
-                    <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>&nbsp<b>Location: </b>Laslovo (Osijek), Croatia</p>
-                    <p><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>&nbsp<b>Current status: </b>Student (5th year, Master's Degree)</p>
-                    <p><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp<b>Grade average: </b>4.936 (out of 5.000)</p>
+                    <p><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;<b>Name: </b>Adrian Bece</p>
+                    <p><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;<b>Date of birth: </b>September 26th 1991.</p>
+                    <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>&nbsp;<b>Location: </b>Laslovo (Osijek), Croatia</p>
+                    <p><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>&nbsp;<b>Current status: </b>Student (5th year, Master's Degree)</p>
+                    <p><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;<b>Grade average: </b>4.936 (out of 5.000)</p>
 
                     <br />
                 </div>
@@ -178,21 +176,21 @@
                     <table class="eduTable pull-left">
                         <tr>
                             <td class="eduDate">2015. - present</td>
-                            <td><b><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbspMicrosoft Virutal Academy</b><hr class="noPadding" />
+                            <td><b><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp;Microsoft Virutal Academy</b><hr class="noPadding" />
                                 <p>Various courses on HTML, CSS, JQuery, ASP .NET MVC, etc.</p>
                             </td>
                         </tr>
 
                         <tr>
                             <td class="eduDate">2013. - present</td>
-                            <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbspFaculty of Electrical Engineering Osijek</b><hr class="noPadding" />
+                            <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp;Faculty of Electrical Engineering Osijek</b><hr class="noPadding" />
                                 <p>Master's degree studies in fields of Process Computing. Computer System design, Automatics, HTML, CSS, Javascript, PHP, MySQL, Robotics, Computer Vision, Computer Networks, etc.</p>
                             </td>
                         </tr>
 
                         <tr>
                             <td class="eduDate">October 2013. - February 2014.</td>
-                            <td><b><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbspE-learning: Mälardalen University, Sweden</b>
+                            <td><b><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp;E-learning: Mälardalen University, Sweden</b>
                                 <hr class="noPadding" />
                                 <p>Automation and Formal Languages: Context-free languages, Context sensitive languages, Derivation tree, Push-down automaton and context free grammars, Parsing, Turing machines, etc.</p>
                             </td>
@@ -200,14 +198,14 @@
 
                         <tr>
                             <td class="eduDate">2010. - 2013.</td>
-                            <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbspFaculty of Electrical Engineering Osijek</b><hr class="noPadding" />
+                            <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp;Faculty of Electrical Engineering Osijek</b><hr class="noPadding" />
                                 <p>Bachelor's degree studies in fields of computer engineering. Object-oriented programming, fundamentals of electrical engineering, fundamentals of electronics and digital electronics,  algorithms, databases, communication networks, etc.</p>
                             </td>
                         </tr>
 
                         <tr>
                             <td class="eduDate">2006. - 2010.</td>
-                            <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbspElektrotehnička i prometna škola Osijek</b><hr class="noPadding" />
+                            <td><b><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp;Elektrotehnička i prometna škola Osijek</b><hr class="noPadding" />
                                 <p>Fundamentals of electrical engineering and electronics, digital electronics, communications, electrical machines, AutoCAD, etc.</p>
                             </td>
                         </tr>
@@ -221,21 +219,21 @@
                     <table class="expTable pull-left">
                         <tr>
                             <td class="expDate">January 2015. - present</td>
-                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbspImagine Cup</b><hr class="noPadding" />
+                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbsp;Imagine Cup</b><hr class="noPadding" />
                                 <p>Project: Easy Learn. Frontend development and graphics design. ASP .NET MVC, HTML and CSS in Visual Studio 2013. and Adobe Photoshop.</p>
                             </td>
                         </tr>
 
                         <tr>
                             <td class="expDate">November 2014. - present</td>
-                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbspSoftware Startup Academy 2014. / 2015.</b><hr class="noPadding" />
+                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbsp;Software Startup Academy 2014. / 2015.</b><hr class="noPadding" />
                                 <p>Project: Foodly. Frontend development, Backend development, HTML, CSS, Javascript, JQuery, PHP, MySQL, C# and graphical design. Website and desktop app. Visual Studio 2013., Microsoft Expression Web and Adobe Photoshop.</p>
                             </td>
                         </tr>
 
                         <tr>
                             <td class="expDate">February 2013. - April 2013.</td>
-                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbspSoftware Startup Academy 2013. / 2014.</b>
+                            <td><b><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>&nbsp;Software Startup Academy 2013. / 2014.</b>
                                 <hr class="noPadding" />
                                 <p>UI design and graphic design using Java, Swing and Adobe Photoshop.</p>
                             </td>
@@ -243,14 +241,14 @@
 
                         <tr>
                             <td class="expDate">2009. - 2012.</td>
-                            <td><b><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbspJamie Mallender</b><hr class="noPadding" />
+                            <td><b><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>&nbsp;Jamie Mallender</b><hr class="noPadding" />
                                 <p>Graphic design in Adobe Photoshop - CD cover, posters, promo materials, logos, etc.</p>
                             </td>
                         </tr>
 
                         <tr>
                             <td class="expDate">2008. - 2010.</td>
-                            <td><b><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>&nbspSvijet Računala d.o.o.</b><hr class="noPadding" />
+                            <td><b><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>&nbsp;Svijet Računala d.o.o.</b><hr class="noPadding" />
                                 <p>Fixing computer hardware and software issues, computer maintenance, OS install, computer building, etc.</p>
                             </td>
                         </tr>
@@ -259,26 +257,16 @@
             </div>
         </div>
 
-        <!-- Marketing messaging and featurettes ================================================== -->
-        <!-- Wrap the rest of the page in another container to center all the content. -->
         <div class="container marketing">
-
-
-
-            <!-- /END THE FEATURETTES -->
-            <!-- FOOTER -->
             <footer>
                 <hr>
                 <p class="pull-right"><a id="a_projects_top">Back to top</a></p>
                 <p>© 2015 Adrian Bece </p>
             </footer>
         </div><!-- /.container -->
-                    <!-- Bootstrap core JavaScript
-                                                                                                                                                                                                                                                    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
+                    
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
 
         <script>
