--- a/projects.html
+++ b/projects.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
     <!--
     
              ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
@@ -8,10 +9,10 @@
              ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
                                       Adrian Bece, 2015.
                                                                     -->
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
+        <meta charset="utf-8">
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
         <meta property="og:image" content="http://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
@@ -37,10 +38,8 @@
         <script src="./bootstrap-3.3.2-dist/js/lightbox.js"></script>
         <script src="./bootstrap-3.3.2-dist/js/codeAdrianJS.js"></script>
         <style type="text/css"></style>
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
-        <!-- CSS and Javascript end-->
     </head>
 
     <body>
@@ -525,10 +524,8 @@
         </div><!-- /.container -->
 </div>
         <!-- Bootstrap core JavaScript -->
-        <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
 
         <script>
