--- a/skills.html
+++ b/skills.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
     <!--
     
              ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
@@ -8,11 +10,12 @@
              ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
                                       Adrian Bece, 2015.
                                                                     -->
-<!DOCTYPE html>
+
 <html lang="en">
     <head>
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
         <link rel="icon" href="./resources/images/ca_icon.png">
+        <meta charset="utf-8">
 
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
@@ -22,7 +25,6 @@
         <!-- Facebook meta info end -->
         <!-- Default meta info-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta charset="utf-8">
         <meta name="robots" content="NOODP,NOYDIR">
         <meta name="keywords" content="Adrian, Bece, HTML , CSS, C#, C++ , C, Cpp, Osijek, Job, Developer, Frontend, Backend, Matlab, Robotics, Computer Vision">
         <meta name="author" content="Adrian Bece">
@@ -38,9 +40,7 @@
         <script src="./bootstrap-3.3.2-dist/js/codeAdrianJS.js"></script>
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
         <style type="text/css"></style>
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-        <!-- CSS and Javascript end -->
     </head>
 
     <body>
@@ -74,7 +74,7 @@
                 <h3 class="centered">Skills Summary</h3>
                 <div class="container">
                     <hr class="hr_gray" />
-                    <h5 id="proLang">Programming languages &nbsp<span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></h5>
+                    <h5 id="proLang">Programming languages &nbsp;<span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></h5>
                 </div>
                 <div class="list-group" id="proLang_group">
                     <div class="row">
@@ -172,7 +172,7 @@ Familiar
 
                 <div class="container">
                     <hr class="hr_gray">
-                    <h5 id="proLangRel">Programming-related skills &nbsp<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h5>
+                    <h5 id="proLangRel">Programming-related skills &nbsp;<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h5>
                     <div class="list-group" id="proLangRel_group">
                         <div class="row">
                             <div class="col-md-4">
@@ -207,7 +207,7 @@ Familiar
 
                 <div class="container">
                     <hr class="hr_gray">
-                    <h5 id="techSkills">Other Technical Skills &nbsp<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h5>
+                    <h5 id="techSkills">Other Technical Skills &nbsp;<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h5>
                     <div class="list-group" id="techSkills_group">
                         <div class="row">
                             <div class="col-md-4">
@@ -269,7 +269,7 @@ Familiar
                 </div>
                 <div class="container" id="otherSkills">
                     <hr class="hr_gray">
-                    <h5>Other skills &nbsp<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h5>
+                    <h5>Other skills &nbsp;<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h5>
                     <div class="list-group" id="otherSkills_group">
                         <div class="row">
                             <ul>
@@ -622,10 +622,8 @@ Familiar
             </footer>
         </div>
         </div><!-- /.container -->
-        <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
 
         <script>
