--- a/designs.html
+++ b/designs.html
@@ -1,15 +1,4 @@
- <!DOCTYPE html>
-   <!--
-    
-             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                      Adrian Bece, 2015.
-                                                                    -->
-
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
@@ -42,6 +31,17 @@
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
     </head>
 
+    <!--
+    
+             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                      Adrian Bece, 2015.
+    -->
+
     <body>
         <!-- NAV  -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -67,7 +67,7 @@
             </div>
         </nav>
         <!-- NAV END  -->
-        <!-- ------------ CONTENT ------------  -->
+        <!-- - - - - - - - - - - - -  CONTENT - - - - - - - - - - - - -  -->
         <div id="imageModal" class="modal fade" tabindex="-1" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
