--- a/skills.html
+++ b/skills.html
@@ -1,16 +1,5 @@
 <!DOCTYPE html>
 
-    <!--
-    
-             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                      Adrian Bece, 2015.
-                                                                    -->
-
 <html lang="en">
     <head>
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
@@ -43,6 +32,17 @@
         <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
     </head>
 
+    <!--
+    
+             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                      Adrian Bece, 2015.
+    -->
+
     <body>
         <!-- NAV  -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -68,7 +68,7 @@
             </div>
         </nav>
         <!-- NAV END  -->
-        <!-- ------------ CONTENT ------------  -->
+        <!-- - - - - - - - - - - - -  CONTENT - - - - - - - - - - - -   -->
         <div class="jumbotron noMargin jumbotron_skills">
             <div class="container">
                 <h3 class="centered">Skills Summary</h3>
@@ -288,7 +288,7 @@ Familiar
             </div>
         </div>
 
-        <!-- ------------ CONTENT - DESCRIPTION ------------  -->
+        <!-- - - - - - - - - - - - -  CONTENT - DESCRIPTION - - - - - - - - - - - -   -->
         <div class="container-full container-blue" id="box_C_Cpp">
             <h2>C and C++</h2>
             <h5>Highly profficient / Expert</h5><hr>
@@ -339,7 +339,7 @@ Familiar
         <div class="container-full container-blue" id="box_HTML_CSS">
             <h2>HTML and CSS</h2>
             <h5>Highly profficient / Expert</h5><hr>
-            <p>I've been working in HTML and CSS since 2014. and I've become very profficient in using it. I keep up to date with latest developments in HTML and CSS and Bootstrap framework. I'm interested and I enjoy UI design and Frontend development overall. I've made a few websites, both simple and complex, using only HTML and CSS with assets made in Photoshop. I am very profficient in using Photoshop for generating CSS for designed elements.
+            <p>I've been working in HTML and CSS since 2014. and I've become very profficient in using it. I keep up to date with latest developments in HTML and CSS and Bootstrap framework. I am familiar with HTML5 and CSS3 validators and I use them to check if the websites that I create meet all the requirements of HTML5 and CSS3 standards. I'm interested and I enjoy UI design and Frontend development overall. I've made a few websites, both simple and complex, using only HTML and CSS with assets made in Photoshop. I am very profficient in using Photoshop for generating CSS for designed elements.
             </p>
             <div class="row">
                 <div class="col-md-8">
@@ -347,6 +347,7 @@ Familiar
                     <ul>
                         <li>Syntax and Semantics of HTML and CSS</li>
                         <li>Familiar with HTML5 and CSS3</li>
+                        <li>HTML5 and CSS3 standard validation</li>
                         <li>Frontend development</li>
                         <li>Website and UI design</li>
                         <li>Working in Bootstrap Framework</li>
@@ -411,7 +412,7 @@ Familiar
 
         <div class="container-full container-gray" id="MySQL_DB">
             <h2>MySQL and Databases</h2>
-            <h5>Familiar</h5></h5><hr>
+            <h5>Familiar</h5><hr>
             <p>I've used MySQL and Databases alongside PHP to fetch and store data. I am familiar with creating, optimizing and maintaining a small-scale to medium-scale database and data stored in it.
             </p>
             <div class="row">
@@ -458,7 +459,7 @@ Familiar
 
         <div class="container-full container-gray" id="ASP_MVC">
             <h2>ASP .NET MVC</h2>
-            <h5>Familiar</h5></h5><hr>
+            <h5>Familiar</h5><hr>
             <p>I've started working with ASP .NET MVC in January 2015. I am familiar with basic syntax, semantics and functionalities of ASP .NET MVC. At the moment, I am working on a project for Microsoft's Imagine Cup using ASP .NET MVC framework along with C#, HTML, CSS and Bootstrap.
             </p>
             <div class="row">
@@ -503,7 +504,7 @@ Familiar
 
         <div class="container-full container-gray" id="backend_dev">
             <h2>Backend Development</h2>
-            <h5>Profficient</h5></h5><hr>
+            <h5>Profficient</h5><hr>
             <p>Alongside with Frontend development, I enjoy backend development and writing high-quality and fast algorithms using various techniques like multithreading and parallel programming. I am familiar with some existing and widely-used algorithms. This is one of the fields which I'd like to learn more about and expand my existing knowledge.
             </p>
             <div class="row">
