--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,4 @@
- <!DOCTYPE html>
-   <!--
-    
-             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                      Adrian Bece, 2015.
-                                                                    -->
-
-
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
@@ -43,6 +31,16 @@
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
     </head>
 
+   <!--
+    
+             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                      Adrian Bece, 2015.
+  -->
     <body>
         <!-- NAV  -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -68,7 +66,7 @@
             </div>
         </nav>
         <!-- NAV END  -->
-        <!-- ------------ CONTENT ------------  -->
+        <!-- - - - - - - - - - - - -  CONTENT - - - - - - - - - - - - -  -->
 
             <div class="jumbotron noMargin">
                 <div class="container">
