--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-    <!--
-    
-             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                      Adrian Bece, 2015.
-                                                                    -->
 <html lang="en">
     <head>
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
@@ -42,6 +32,17 @@
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
     </head>
 
+    <!--
+    
+             ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+            ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+            ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+            ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+            ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+             ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                      Adrian Bece, 2015.
+    -->
+
     <body>
         <!-- NAV  -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -67,7 +68,7 @@
             </div>
         </nav>
         <!-- NAV END  -->
-        <!-- ------------ CONTENT ------------  -->
+        <!-- - - - - - - - - - - - - - CONTENT - - - - - - - - - - - -   -->
         <div class="blurContainer">
 
             <div id="imageModal" class="modal fade" tabindex="-1" role="dialog">
@@ -391,7 +392,7 @@
 
                     <div class="col-lg-10">
                         <h4>Details: </h4>
-                        <p>During 2014. and 2015. I was thinking about making a website that would feature my programming work (frontend and backend) and design work. I used to have some basic websites in the past (hosted on and made in Wix editor) but I wanted to make my own site and write my own code and design it from scratch using only basic frameworks and templates (Bootstrap) to make it more modern and responsive.</p>
+                        <p>During 2014. and 2015. I was thinking about making a website that would feature my programming work (frontend and backend) and design work. I used to have some basic websites in the past (hosted on and made in Wix editor) but I wanted to make my own site and write my own code and design it from scratch using only basic frameworks and templates (Bootstrap) to make it more modern and responsive. This website is up to HTML5 standards and CSS3 standards and it was checked using an appropriate validator.</p>
                     </div>
                 </div>
             </div>
